# nrfx-cmake-example

./: CMakeLists.txt  README.md
include/: nrfx_config.h  nrfx_glue.h
src/: main.c
